# The-Attentional-Thief

./: .gitignore  CITATION.cff  LICENSE  LICENSE-DATA  README.md  pyproject.toml
code/analysis/: 05_group_erp_frp_srp.py  06_group_erp_analysis.py  07_dm_analysis.py  08_group_frp_analysis.py  09_et_individual.py  behavioral_analysis.py  brain_behavior_correlation.py  config.py  constant_et_eeg_joint.py  et_eeg_sync.py  frp_helpers.py  repro_behavioral.py  repro_erp.py  repro_eyetracking.py  repro_frp.py
code/figures/: README.md
code/preprocessing/: 01_preprocess.py  02_erp.py  03_frp.py  04_timefreq.py
data/derived/behavioral/: behavioral_cell_level.csv  behavioral_trial_level.csv  gap_adjusted_cell_level.csv
data/derived/behavioral/reference/: anova_results.csv  condition_descriptives.csv  condition_posthoc.csv  gap_paired_tests.csv  gap_rm_anova.csv
data/derived/brain_behavior/: brain_behavior_correlations.csv  merged_erp_behavioral.csv
data/derived/brain_behavior/reference/: condition_level_correlations.csv  neural_behavior_correlations.csv
data/derived/erp/: erp_cell_means.csv  erp_summary_all.csv
data/derived/erp/reference/: erp_maineffect_collapsed.csv  erp_rmanova.csv
data/derived/eyetracking/: et_summary_all.csv
data/derived/frp/: frp_condition_comparisons.csv  frp_summary_all.csv
data/derived/frp/reference/: frp_lambda_dz_ci.csv
docs/: ANALYSIS_PIPELINE.md  PREPROCESS_PLAN.md
experiment/: __init__.py  components.py  conditions.py  config.py  eyetracker.py  run_experiment.py  trial_structure.py  trials.py  utils.py
figures/: README.md
(+101 files in other folders)
