[project]
name = "attentional-thief"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "eyelinkio",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "Pygments>=2.20.0",
    "pillow>=12.2.0",
    "mistune>=3.2.1",
    "nbconvert>=7.17.1",
    "jupyter-server>=2.18.0",
    "jupyterlab>=4.5.7",
    "notebook>=7.5.6",
    "mne>=1.11.0",
    "autoreject>=0.4.3",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "opencv-python-headless>=4.13.0.92",
    "mne-icalabel>=0.8.1",
    "onnxruntime>=1.24.3",
    "statsmodels>=0.14.6",
    "pingouin>=0.6.1",
]

[dependency-groups]
dev = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["experiment"]
